# gof-designpatterns-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  makebuilds
src/0_creational_patterns/abstract_factory/: CMakeLists.txt  abstract_factory.cpp  abstract_factory.hpp  bombed_maze_factory.hpp  enchanted_maze_factory.hpp  header.hpp  main.cpp  maze_factory.hpp  source.cpp
src/0_creational_patterns/builder/: CMakeLists.txt  CountingMazeBuilder.cpp  CountingMazeBuilder.h  MazeBuilder.h  StandardMazeBuilder.cpp  StandardMazeBuilder.h  builder.cpp  builder.hpp  counting_maze_builder.cpp  counting_maze_builder.h  counting_maze_builder.hpp  header.hpp  main.cpp  main_builder1.cpp  main_builder2.cpp  maze_builder.cpp  maze_builder.h  maze_builder.hpp  source.cpp  standard_maze_builder.cpp  standard_maze_builder.h  standard_maze_builder.hpp
src/0_creational_patterns/factory_method/: CMakeLists.txt  bombed_maze_game.hpp  enchanted_maze_game.hpp  factory_method.cpp  factory_method.hpp  header.hpp  main.cpp  source.cpp
src/0_creational_patterns/models/: BombedMazeFactory.cpp  BombedMazeFactory.h  BombedMazeGame.cpp  BombedMazeGame.h  BombedWall.cpp  BombedWall.h  CMakeLists.txt  CastSpell.h  Door.cpp  Door.h  DoorNeedingSpell.cpp  DoorNeedingSpell.h  EnchantedMazeFactory.cpp  EnchantedMazeFactory.h  EnchantedMazeGame.h  EnchantedRoom.cpp  EnchantedRoom.h  Maze.cpp  Maze.h  MazeFactory.cpp  MazeFactory.h  MazeGame.cpp  MazeGame.h  MazeParts.h  Room.cpp  Room.h  RoomWithABomb.cpp  RoomWithABomb.h  Spell.h  Wall.cpp  Wall.h  bombed_maze_factory.cpp  bombed_maze_factory.h  bombed_maze_game.cpp  bombed_maze_game.h  bombed_wall.cpp  bombed_wall.h  cast_spell.h  door.cpp  door.h  (+22 more)
src/0_creational_patterns/models/bomb/: bomb.hpp
src/0_creational_patterns/models/bombed_wall/: bombed_wall.hpp
src/0_creational_patterns/models/direction_map_site/: direction_map_site.hpp
src/0_creational_patterns/models/door/: door.hpp
src/0_creational_patterns/models/door_needing_spell/: door_needing_spell.hpp
src/0_creational_patterns/models/enchanted_room/: enchanted_room.hpp
src/0_creational_patterns/models/maze/: maze.cpp  maze.hpp
src/0_creational_patterns/models/maze_game/: maze_game.cpp  maze_game.hpp
src/0_creational_patterns/models/room/: room.cpp  room.hpp
src/0_creational_patterns/models/room_with_a_bomb/: room_with_a_bomb.hpp
src/0_creational_patterns/models/spell/: spell.hpp
src/0_creational_patterns/models/wall/: wall.cpp  wall.hpp
src/0_creational_patterns/prototype/: CMakeLists.txt  MazePrototypeFactory.cpp  MazePrototypeFactory.h  header.hpp  main.cpp  maze_prototype_factory.cpp  maze_prototype_factory.h  maze_prototype_factory.hpp  prototype.cpp  prototype.hpp  source.cpp
src/0_creational_patterns/singleton/: CMakeLists.txt  header.hpp  maze_factory_as_singleton.cpp  maze_factory_as_singleton.hpp  singleton.cpp  singleton.hpp  source.cpp
src/1_structural_patterns/adapter/class_adapter/: CMakeLists.txt  TextShape.cpp  TextShape.h  text_shape.cpp  text_shape.h
src/1_structural_patterns/adapter/object_adapter/: CMakeLists.txt  TextShape.cpp  TextShape.h  text_shape.cpp  text_shape.h
src/1_structural_patterns/bridge/models/: ApplicationWindow.cpp  CMakeLists.txt  IconWindow.cpp  IconWindow.h  PMWindowImp.cpp  PMWindowImp.h  View.cpp  View.h  Window.cpp  Window.h  WindowImp.h  WindowSystemFactory.cpp  WindowSystemFactory.h  XWindowImp.cpp  XWindowImp.h  application_window.cpp  application_window.h  icon_window.cpp  icon_window.h  pm_window_imp.cpp  pm_window_imp.h  view.cpp  view.h  window.cpp  window.h  window_imp.h  window_system_factory.cpp  window_system_factory.h  x_window_imp.cpp  x_window_imp.h
src/1_structural_patterns/composite/: Bus.h  CMakeLists.txt  Cabinet.h  Card.cpp  Card.h  Chassis.h  CompositeEquipment.cpp  CompositeEquipment.h  Equipment.h  FloppyDisk.cpp  FloppyDisk.h  bus.cpp  bus.h  cabinet.cpp  cabinet.h  card.cpp  card.h  chassis.cpp  chassis.h  composite_equipment.cpp  composite_equipment.h  equipment.cpp  equipment.h  floppy_disk.cpp  floppy_disk.h  main.cpp
src/1_structural_patterns/decorator/models/: BorderDecorator.cpp  BorderDecorator.h  CMakeLists.txt  Decorator.cpp  Decorator.h  DropShadowDecorator.cpp  DropShadowDecorator.h  ScrollDecorator.cpp  ScrollDecorator.h  TextView.h  Window.cpp  Window.h  border_decorator.cpp  border_decorator.h  decorator.cpp  decorator.h  drop_shadow_decorator.cpp  drop_shadow_decorator.h  text_view.h  (+6 more)
src/1_structural_patterns/facade/: BytecodeStream.h  CMakeLists.txt  CodeGenerator.h  Compiler.h  ExpressionNode.cpp  ExpressionNode.h  Parser.h  ProgramNode.h  ProgramNodeBuilder.h  RISCCodeGenerator.h  Scanner.h  StackMachineCodeGenerator.h  StatementNode.h  Token.h  bytecode_stream.h  code_generator.h  compiler.cpp  compiler.h  expression_node.cpp  expression_node.h  header.hpp  parser.h  program_node.h  program_node_builder.h  risc_code_generator.h  scanner.h  stack_machine_code_generator.h  statement_node.h  token.h
src/1_structural_patterns/proxy/: CMakeLists.txt  Graphic.h  Image.h  ImageProxy.cpp  ImageProxy.h  TextDocument.cpp  TextDocument.h  graphic.h  image.cpp  image.h  image_proxy.cpp  image_proxy.h  main.cpp  text_document.cpp  text_document.h
src/2_behavioral_patterns/iterator/: CMakeLists.txt  main.cpp  main_external_iterator.cpp  main_internal_list_iterator.cpp
src/2_behavioral_patterns/observer/: AnalogClock.h  CMakeLists.txt  ClockTimer.cpp  DigitalClock.cpp  DigitalClock.h  Observer.h  Subject.h  analog_clock.h  clock_timer.cpp  clock_timer.h  digital_clock.cpp  digital_clock.h  observer.h  subject.cpp  subject.h  widget.h
src/3_foundation_classes/: CMakeLists.txt  Coord.cpp  Coord.h  Point.cpp  Point.h  Rect.cpp  Rect.h  coord.cpp  coord.h  gof_foundation.cpp  gof_foundation.hpp  main.cpp  point.cpp  point.h  rect.cpp  rect.h
src/3_foundation_classes/iterator/: CMakeLists.txt
src/3_foundation_classes/list/: CMakeLists.txt
src/3_foundation_classes/list_iterator/: CMakeLists.txt
src/3_foundation_classes/point/: CMakeLists.txt
src/3_foundation_classes/rect/: CMakeLists.txt
(+177 files in other folders)
